adding comments and draft project plan

--- a/r/final_paper_quarto.qmd
+++ b/r/final_paper_quarto.qmd
@@ -19,15 +19,9 @@ engine: knitr
 
 Something, something, something...
 
-## Research Questions
+## Research Question
 
--   Predicting stop outcomes: Build a classification model to predict the outcome a police stop (e.g., ticket, warning, arrest) based on various factors such a demographics, time of day, or stop duration.
-
--   Will I be searched by the police?: Build a binary classification model capable of predicting the likeliness of a police search based on various factors such as demographics, time of day, stop duration, etc.
-
--   Predicting stop duration: Build a model to predict how long a police stop might last once initiatied.
-
--   How many tickets?: Build a model to predict the number of tickets one might receive if stopped.
+What factors influence police stop outcomes in Washington, D.C., and what are their implications for community-police interactions?
 
 ## About the Data
 
@@ -36,6 +30,12 @@ Something, something, something...
 ## Methodology
 
 models used, model selection, model diagnostics.
+
+-   Predicting stop outcomes: Build a classification model to predict the outcome a police stop (e.g., ticket, warning, arrest) based on various factors such a demographics, time of day, or stop duration.
+
+-   Will I be searched by the police?: Build a binary classification model capable of predicting the likeliness of a police search based on various factors such as demographics, time of day, stop duration, etc.
+
+-   Predicting stop duration: Build a model to predict how long a police stop might last once initiated.
 
 ## Results
 
